# learning-opengl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
assets/shader/: simple.shader
config/cmake/: linux-clang-16.json  linux-gcc-13.json  osx-clang-15.json  win32-clang-16.json  win32-msvc-2022.json
doc/: CMakeLists.txt
docs/: CMakeLists.txt
src/: CMakeLists.txt  bufferUsagePattern.hpp  error.cpp  error.hpp  indexBuffer.cpp  indexBuffer.hpp  main.cpp  numberOfComponents.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  shaderParser.cpp  shaderParser.hpp  shaderType.hpp  stateVariables.cpp  stateVariables.hpp  vertexArray.cpp  vertexArray.hpp  vertexAttributeIndex.hpp  vertexBuffer.cpp  vertexBuffer.hpp  vertexBufferElement.hpp  vertexBufferLayout.cpp  vertexBufferLayout.hpp
